corrected break alignment on contact sidebar to 768px to match hamburger break

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,6 +190,20 @@ button.btn { /*Submit Button*/
     background-color: #777;
   }
 
+/*
+These rules take effect when the browser's width
+is either 768px or less. Merely for cosmetic purposes.
+---------------------------------------------------------------------------------------------------- */
+
+@media screen and (max-width: 768px) {
+  
+  /* Contact Page Connect Sidebar Alignment Correction */
+
+  .connect {
+    margin-left: 0 !important;
+  }
+
+}
 
 /*
 These rules take effect when the browser's width
@@ -197,12 +211,6 @@ is either 640 or less. Merely for cosmetic purposes.
 ---------------------------------------------------------------------------------------------------- */
 
 @media screen and (max-width: 640px) {
-
-  /* Contact Page Connect Sidebar Alignment Correction */
-
-  .connect {
-    margin-left: 0 !important;
-  }
 
   /* Hamburger Nav Styling Corrections */
 
